<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_animal"
        android:textSize="@dimen/dim_25sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="@dimen/dim_200dp"
        android:layout_height="@dimen/dim_60dp"
        android:layout_marginTop="@dimen/dim_200dp"
        android:hint="@string/name"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="@dimen/dim_200dp"
        android:layout_height="@dimen/dim_60dp"
        android:layout_margin="@dimen/dim_30dp"
        android:hint="@string/age"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_breed"
        android:layout_width="@dimen/dim_200dp"
        android:layout_height="@dimen/dim_60dp"
        android:layout_margin="@dimen/dim_30dp"
        android:hint="@string/breed"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_age" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="@dimen/dim_170dp"
        android:layout_height="@dimen/dim_60dp"
        android:layout_margin="@dimen/dim_30dp"
        android:backgroundTint="@color/green"
        android:text="@string/add"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_breed" />

</androidx.constraintlayout.widget.ConstraintLayout>